--- a/config.json
+++ b/config.json
@@ -3,6 +3,27 @@
   "advancedMode": "false",
   "language": "en-US",
   "repository": [
-    "repository-name"
+    "coding-interview-preparation",
+    "complete-javascript-course-2021",
+    "complete-react-course-2021",
+    "course-goals-react-project",
+    "curriculum-vitae",
+    "expenses-react-project",
+    "food-order-react-project",
+    "full-stack-engineer-2021",
+    "github-slideshow",
+    "guess-my-number",
+    "instagram-clone-laravel-project",
+    "intro-react",
+    "javascript-projects-2021",
+    "javascript-unit-testing",
+    "modal-window",
+    "movies-react-project",
+    "my-views-counter",
+    "pig-game",
+    "pizza-order-laravel-2021",
+    "react-projects-2021",
+    "somekindofwallflower",
+    "todo-android-app-kotlin"
   ]
 }
