Add freeCodeCamp repo on config file

--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
     "curriculum-vitae",
     "expenses-react-project",
     "food-order-react-project",
+    "free-code-camp",
     "full-stack-engineer-2021",
     "github-slideshow",
     "guess-my-number",
