--- a/config.json
+++ b/config.json
@@ -15,7 +15,9 @@
     "github-slideshow",
     "guess-my-number",
     "instagram-clone-laravel-project",
+    "interview_questions_2022"
     "intro-react",
+    "javascript-algorithms-and-data-structures",
     "javascript-projects-2021",
     "javascript-unit-testing",
     "modal-window",
@@ -26,5 +28,6 @@
     "react-projects-2021",
     "somekindofwallflower",
     "todo-android-app-kotlin"
+    "vr-project"
   ]
 }
