--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "github-slideshow",
     "guess-my-number",
     "instagram-clone-laravel-project",
-    "interview_questions_2022"
+    "interview_questions_2022",
     "intro-react",
     "javascript-algorithms-and-data-structures",
     "javascript-projects-2021",
