--- a/config.json
+++ b/config.json
@@ -27,7 +27,7 @@
     "pizza-order-laravel-2021",
     "react-projects-2021",
     "somekindofwallflower",
-    "todo-android-app-kotlin"
+    "todo-android-app-kotlin",
     "vr-project"
   ]
 }
