--- a/config.json
+++ b/config.json
@@ -23,6 +23,7 @@
     "modal-window",
     "movies-react-project",
     "my-views-counter",
+    "microservices-with-node-js-and-react",
     "pig-game",
     "pizza-order-laravel-2021",
     "react-projects-2021",
