--- a/config.json
+++ b/config.json
@@ -3,32 +3,39 @@
   "advancedMode": "false",
   "language": "en-US",
   "repository": [
+   "codecademy-courses",
+    "codecademy-learn-react",
     "coding-interview-preparation",
     "complete-javascript-course-2021",
     "complete-react-course-2021",
+    "complete-react-guide",
     "course-goals-react-project",
     "curriculum-vitae",
     "expenses-react-project",
-    "food-order-react-project",
-    "free-code-camp",
+    "food-order-react-project", 
+    "free-code-camp", 
     "full-stack-engineer-2021",
-    "github-slideshow",
-    "guess-my-number",
-    "instagram-clone-laravel-project",
-    "interview_questions_2022",
+    "github-slideshow", 
+    "guess-my-number", 
+    "instagram-clone-laravel-project", 
+    "interview_questions_2022", 
     "intro-react",
     "javascript-algorithms-and-data-structures",
     "javascript-projects-2021",
-    "javascript-unit-testing",
+    "javascript-unit-testing", 
+    "k8sdemo",
+    "Learn-DevOps-Docker-Kubernetes-Terraform-and-Azure-DevOps-2022",
+    "live-score",
+    "microservices-with-node-js-and-react",
     "modal-window",
     "movies-react-project",
     "my-views-counter",
-    "microservices-with-node-js-and-react",
     "pig-game",
-    "pizza-order-laravel-2021",
+    "pizza-order-laravel-2021", 
     "react-projects-2021",
     "somekindofwallflower",
-    "todo-android-app-kotlin",
-    "vr-project"
+    "todo-android-app-kotlin", 
+    "Todos-React-TypeScript", 
+    "vr-project",
   ]
 }
