--- a/config.json
+++ b/config.json
@@ -36,6 +36,6 @@
     "somekindofwallflower",
     "todo-android-app-kotlin", 
     "Todos-React-TypeScript", 
-    "vr-project",
+    "vr-project"
   ]
 }
