--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "language": "en-US",
   "repository": [
    "codecademy-courses",
-    "codecademy-learn-react",
+    "codecademy-learn-react-2022",
     "coding-interview-preparation",
     "complete-javascript-course-2021",
     "complete-react-course-2021",
